# iVCS

./: .gitignore  LICENSE  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  ruff.toml
benchmarks/: 01_return_constant.c  02_simple_arithmetic.c  03_local_variable.c  04_simple_if.c  05_simple_loop.c  README.md  compile.sh  test_benchmarks.py
data/: xboxkrnl_ordinals.json  xboxkrnl_signatures.json
docs/: agent-loop.md  ghidra_setup.md  name_recovery.md
examples/: halo2_default.project.json
ghidra_scripts/: DecompileOne.java  DumpStructs.java
scripts/: batch.py  codindex.py  enumerate.py  halo2_demo.py  halo2_sanity.py  integrate.py  libmatch.py  smoke_run.py  webui.py
src/: __init__.py  __main__.py  agent.py  agent_loop.py  archive.py  batch.py  carver.py  cfg.py  coff.py  coff_read.py  compile_tool.py  decoder.py  fingerprint.py  ghidra_decompile.py  integrator.py  launcher.py  libmatch.py  link_tool.py  llm_clients.py  loader.py  notes.py  objdiff.py  paths.py  pe_read.py  project.py  relink.py  relink_image.py  relocs.py  session.py  strings_xref.py  sweep.py  symbols.py  verifier.py  workspace.py  xbe.py  xboxkrnl.py
tests/: __init__.py  conftest.py  test_agent_loop.py  test_archive.py  test_batch.py  test_carver.py  test_cfg.py  test_coff.py  test_coff_read.py  test_compile_tool.py  test_decoder.py  test_fingerprint.py  test_ghidra_decompile.py  test_image_verify.py  test_integrator.py  test_launcher.py  test_libmatch.py  test_link_tool.py  test_llm_clients.py  test_notes.py  test_objdiff.py  test_pe_read.py  test_project.py  test_relink.py  (+10 more)
(+123 files in other folders)
