[project]
name = "ivcs"
version = "0.1.0"
description = "Matching-decompilation platform for the original Xbox"
requires-python = ">=3.14"
dependencies = [
    "capstone",
    "litellm",
]

[dependency-groups]
dev = [
    "pytest",
    "hypothesis",
    "ruff",
]

[tool.uv]
# Application, not a library: code imports `src.*` directly, nothing to build/install.
package = false

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-bandit
    "S",
    # isort
    "I",
    # perflint
    "PERF",
]
ignore = [
    "SIM108", "SIM118", "SIM105",
    "S603",  # subprocess.run(argv_list, ...) is the safe pattern; rule has no exception for it
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # asserts in tests
"src/dev/*" = ["S101", "S108"]  # demo/sanity diagnostics: assert + /tmp paths are intentional
"src/webui/*" = ["S101", "S108", "E501"]  # HTML/CSS template lines don't split well

[tool.ruff.format]
indent-style = "tab"
